Finished Page Rewrite
Modeled page after NMCFP

--- a/html/home.html
+++ b/html/home.html
@@ -8,7 +8,8 @@
 }
 
 .info {
-	margin-left:10px; margin-right:10px; margin-bottom:10px;
+	margin: 30px;
+	margin-bottom: 50px;
 	float:left;
 	background: linear-gradient(#eee, #ABABAB);
 	border:3px solid #eee;
@@ -26,11 +27,12 @@
 	border-bottom-left-radius:10px;
 	padding: 10px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	font-weight: bold;
+	font-size: 14px;
+	line-height: 18px;
 	color: #707070;
-	height: 252px;
-	width: 321px;
+	text-align: justify;
+	height: 182px;
+	width: 281px;
 }
 
 .info ul {
@@ -175,22 +177,21 @@
 <iframe class="splash" src="./html/splash.html" seamless="yes"></iframe>
 
 <div class="picture">
-<img src="./images/cover_photo.jpg" class="picture" style="margin-left:10px; margin-right:10px; margin-bottom:10px;"/>
+<img src="./images/cover_photo.gif" class="picture" style="margin-left:10px; margin-right:10px; margin-bottom:10px;"/>
 </div>
 
 <div class="info">
-<ul>
-<li>Informing New Mexico citizens about proposed state and federal legislation impacting the sanctity of life, marriage, and family</li>
-<li>Providing concise, clear descriptions of why proposed legislation will impact the rights of the unborn, married couples and families</li>
-<li>Notifying voters to contact their federal and state representatives regarding pending legislation which will disrespect life, or violate marriage and family</li>
-<li>Enabling constituents to contact federal and state representatives easily and efficiently to make their concerns known in time to make a difference</li>
-</ul>
+Family is the fundamental building block of all human civilizations. Marriage is the glue that holds it 
+together. The health of our culture, its citizens and their children is intimately linked to the health and 
+well-being of marriage. In these pages, you will find a wealth of information and resources that will help 
+you understand just how much the family matters and keep up to date on how the family is faring in our 
+culture.
 </div>
 
 <div class="add" style="background: linear-gradient(to top, #FFFFFF 30%, #FF0000 70%); font-size:12px;">
-<div class="shadow" style="float:left;"><img src="./images/cruz.png"></div>
-<div>Pastor Cruz comes to Albuquerque<br /> June 12</div>
-<a href="./index.php?content=events">Learn More</a>
+<div class="shadow" style="float:left; position:relative; bottom: 6px;"><img src="./images/colson.png"></div>
+<div>Chuck Colson on the New Mexico Biblical Worldview</div>
+<a href="./index.php?content=colson">Learn More</a>
 </div>
 <div class="add" style="background: linear-gradient(to top, #FFFFFF 30%, #33CCFF 70%);">
 <div class="shadow" style="float:left; margin-left:10px"><img src="./images/mailbox.png"></div>
