--- a/html/message.html
+++ b/html/message.html
@@ -2,42 +2,7 @@
 <p style="font-size:26px; font-weight:bold; text-align:center; margin-top: 0px;">Message from the Executive Director</p>
 <img src="./images/people/Leslie.jpg" alt="Leslie Cumiford" style="float:left; margin-top: 6px; margin-right:10px; margin-bottom: 10px"/>
 
-I am thrilled to take the helm of the NM Center for Family Policy, formerly known as TVAC – New Mexico 
-(Traditional Values Advocacy Committee of New Mexico). Our Board of Directors has launched a new level of 
-operations to meet the challenges of the next decade, and I commend them for it. In part, that direction led to 
-our new name, the moving of our headquarters from Farmington to Albuquerque, and the beginning of a series of 
-exciting community events such as the June 12 dinner with Pastor Rafael Cruz, Senator Ted Cruz’ father.<p />
-
-Chris Donnelly will remain an integral part of our organization. I would like to thank him for his tireless 
-efforts on behalf of life, marriage, the family and religious freedom over the last few years. What I appreciate 
-most about Chris, as well as our Board, is the heart that they bring to the issues. Chris and our Board members 
-are involved because they are firmly committed to serving the Lord by restoring our society to a culture that 
-values the institution of marriage as God set it up, the family as the first and best teacher about life and 
-faith, and the understanding that every life is a gift from God with intrinsic value. They are keenly aware 
-that we must uphold these values, along with the freedom to express them, if we are to remain a cogent and 
-thriving society which is the envy of the entire world. We have seen plenty of examples of society unhinged 
-throughout the ages, and we are committed to doing everything that we can to redirect the path of our society 
-to a higher calling.<p />
-
-In light of the recent decision by World Vision to support same-sex couples, I want assure you that at 
-the heart of our organization remains the staunch commitment to serve New Mexico by supporting life, 
-traditional marriage, the family unit and religious freedom. We do so by surveying political candidates, 
-creating voter guides to heighten voter awareness of their positions, and informing voters about our issues 
-in specific races during the election cycle. To better accomplish these goals, we need an army of volunteers 
-networked throughout the state. Over the next few weeks, we will be developing our website and social media 
-outreach to render it easier for you to get involved. I invite you to contact us to find out more about the 
-ways in which you can make a difference. We will give you the training and know-how that you need to succeed, 
-and you will be joining a community of like-minded champions of family values.<p />
-
-Your input and prayers are welcomed and valued as we ramp up to the challenges ahead. After all, a handful 
-of us, no matter how talented, cannot accomplish the daunting task before us. However, as a community, through 
-God’s wisdom and direction and by His power, we know this transformation is possible. I remind you of Rome. 
-Christians were in the minority at the time of Christ, a small band of believers following the Messiah. Within 
-a handful of years, Christians went from those likely to be persecuted or relegated to the lower rungs of society 
-to those likely to be preferred for high government positions. Roman society turned from rampant sexual 
-practices, abortion for convenience and sex selection, and slavery to intact family units with adults who 
-valued life and a society that rejected slavery. God and His people have triumphed in this way time and time 
-again, and we have every reason to expect that He will do it again, right here in New Mexico.<p />
+MESSAGE...<p />
 
 Leslie Cumiford<p />
 
