--- a/html/rights.html
+++ b/html/rights.html
@@ -16,12 +16,11 @@
 </style>
 
 <div class="contact">
-NM Center for Family Policy <br />
-PO Box 20937 <br />
-Albuquerque, NM 87154 <br />
-(505) 261-9566 <br />
-email: info@nmcfp.com <br /><br />
+NM Center for Family Values<br />
+ADDRESS<br />
+PHONE NUMBER<br />
+email: info@nmcfv.com<br /><br />
 </div>
 <div class="rights">
-Copyright &#169; 2014, NM Center for Family Policy. All rights reserved<br />
+Copyright &#169; 2014, NM Center for Family Values. All rights reserved<br />
 </div>
