--- a/html/splash.html
+++ b/html/splash.html
@@ -32,6 +32,6 @@
 
 <a href="../index.php?content=message" style="text-decoration:none;">
 <div class="splash">
-TVAC is now NMCFP - click here for a message from the Executive Director
+VFFV is now NMCFV - click here for a message from the Executive Director
 </div>
 </a>
