--- a/html/contact.html
+++ b/html/contact.html
@@ -1,10 +1,8 @@
 <div class="font" style="padding:10px; text-align:center;">
 <p style="font-size:26px; font-weight:bold; margin-top: 0px;">Contact Us</p>
-NM Center for Family Policy<br />
-PO Box 20937<br />
-Albuquerque, NM 87154<p />
+NM Center for Family Values<br />
+ADDRESS<br />
+PHONE NUMBER<p />
 
-505-261-9566<p />
-
-info@nmcfp.com
+info@nmcfv.com
 </div>
