--- a/html/issues.html
+++ b/html/issues.html
@@ -1,25 +1,30 @@
 <div class="font" style="padding:10px;">
 <p style="font-size:26px; font-weight:bold; text-align:center; margin-top: 0px;">Our Issues</p>
 
+NM Center for Family Values is a non-partisan,non-denominational organization dedicated to the 
+promotion of traditional family values in New Mexico. See our issues here. VFFV is a 501(c)3 
+organization funded through yearly, monthly and one time tax-deductible donations from 
+individuals, families, churches, corporations and private foundations.<br />
+
 <p style="font-size:20px; font-weight:bold;">Life</p>
-NM Center for Family Policy  is dedicated to the protection of human life from the time of conception to the 
-end of natural life. We promote public policy to protect the unborn child and their mothers. In further 
-support of life, we oppose euthanasia, physician-assisted suicide, human cloning, and embryonic stem cell 
-research. <p />
-Life Issues - <a href="http://www.citizenlink.com/analysis/life-issues/" target="_blank" class="link">Citizen Link</a><p />
-Sanctity of Life Page - <a href="http://www.alliancedefensefund.org/Life" target="_blank" class="link">Alliance Defending Freedom</a><p />
+NM Center for Family Values is dedicated to the protection of human life from the time of 
+conception to the end of natural life. We promote public policy to protect the unborn child and their 
+mothers. In further support of life, we oppose euthanasia, physician-assisted suicide, human 
+cloning, and embryonic stem cell research.<p />
+<a href="http://www.citizenlink.com/analysis/life-issues/" target="_blank" class="link">Life Issues - Citizen Link</a><p />
+<a href="http://www.alliancedefensefund.org/Life" target="_blank" class="link">Sanctity of Life Page - Alliance Defending Freedom</a><p />
 
 <p style="font-size:20px; font-weight:bold;">Religious Freedom</p>
-NM Center for Family Policy supports First Amendment religious liberties for New Mexicans, and defends 
-against unconstitutional discrimination toward people of faith. We are also committed to preserving our nation’s 
-historic dedication to public expression of religious faith. <p />
-Religious Freedom - <a href="http://www.focusonthefamily.com/popups/media_player.aspx?MediaId={8D447B29-967F-4E6A-827A-9D6B4FC4F17A}" target="_blank" class="link">Focus on the Family</a><p />
-Religious Freedom - <a href="http://www.alliancedefensefund.org/ReligiousFreedom" target="_blank" class="link">Alliance Defending Freedom</a><p />
+NM Center for Family Values supports First Amendment religious liberties for New Mexicans, and defends 
+against unconstitutional discrimination toward people of faith. We are also committed to 
+preserving our nation’s historic dedication to public expression of religious faith.<p />
+<a href="http://www.focusonthefamily.com/popups/media_player.aspx?MediaId={8D447B29-967F-4E6A-827A-9D6B4FC4F17A}" target="_blank" class="link">Religious Freedom - Focus on the Family</a><p />
+<a href="http://www.alliancedefensefund.org/ReligiousFreedom" target="_blank" class="link">Religious Freedom - Alliance Defending Freedom</a><p />
 
 <p style="font-size:20px; font-weight:bold;">Marriage</p>
-NM Center for Family Policy  supports measures which strengthen and encourage the institution of marriage 
-through covenant marriage. <p />
-Marriage Channel - <a href="http://www.focusonthefamily.com/marriage.aspx" target="_blank" class="link">Focus on the Family</a><p />
-Marriage Talking Points - </strong><a href="http://www.nationformarriage.org/site/c.omL2KeN0LzH/b.4475595/k.566A/Marriage_Talking_Points.htm" target="_blank" class="link">National Organization for Marriage</a><p />
-Marriage Issues - <a href="http://www.citizenlink.com/analysis/marriage/" target="_blank" class="link">Citizen Link</a><p />
+NM Center for Family Values supports measures which strengthen and encourage the institution of 
+marriage through covenant marriage. <p />
+<a href="http://www.focusonthefamily.com/marriage.aspx" target="_blank" class="link">Marriage Channel - Focus on the Family</a><p />
+<a href="http://www.nationformarriage.org/site/c.omL2KeN0LzH/b.4475595/k.566A/Marriage_Talking_Points.htm" target="_blank" class="link">Marriage Talking Points - National Organization for Marriage</a><p />
+<a href="http://www.citizenlink.com/analysis/marriage/" target="_blank" class="link">Marriage Issues - Citizen Link</a><p />
 </div>
