--- a/html/rights.html
+++ b/html/rights.html
@@ -17,8 +17,9 @@
 
 <div class="contact">
 NM Center for Family Values<br />
-ADDRESS<br />
-PHONE NUMBER<br />
+P.O. Box 16042<br />
+Albuquerque, NM 87191<br />
+(505) 291-9566<br />
 email: info@nmcfv.com<br /><br />
 </div>
 <div class="rights">
