--- a/html/nav.html
+++ b/html/nav.html
@@ -176,8 +176,9 @@ nav ul ul li a:hover {
 <nav>
 <ul>
 <li><a href="./index.php?content=home">Home</a></li>
-<li><a href="./index.php?content=people">Churches/Pastors</a></li>
+<li><a href="./index.php?content=churches">Churches/Pastors</a></li>
 <li><a href="./index.php?content=issues">Our Issues</a></li>
+<li><a href="./index.php?content=people">Board/Staff</a></li>
 <li><a href="./index.php?content=contact">Contact Us</a></li>
 <li><a class="donate" href="https://www.sagepayments.net/eftcart/forms/donate.asp?M_id=681553574625">Donate</a></li>
 </ul>
