Added Social Media and Misc
- Added social media buttons at the bottom of the page
- Updated people page with message about Chris

--- a/html/people.html
+++ b/html/people.html
@@ -89,7 +89,7 @@ Rio Rancho.</m>
 <!--[<a class="show_more" id="Pat">more</a>]--></td>
 
 </tr><tr>
-<td><!--<img src="./images/people/Leonard.jpg" />-->
+<td><img src="./images/people/Leonard.jpg" />
 <bold>Leonard Lee Rawson</bold> was appointed to the State Investment Council by the Legislative 
 Council in 2010. He is a native New Mexican and long-time Las Cruces resident who graduated from 
 Las Cruces High School and New Mexico State University. Lee is President of Rawson, Inc., a successful 
@@ -149,12 +149,10 @@ Akita.</m>
 [<a class="show_more" id="Leslie">more</a>]</td>
 
 <td><img src="./images/people/Chris.jpg" />
-<bold>Chris Donnelly</bold> (Assistant Director) was born and raised in Chicago, Illinois. As a 
-rebellious teenager, Chris left home and joined the Air Force. It was at Cannon Air Force Base 
-in Clovis, New Mexico that he gave his life to God and felt the call to become a pastor. Chris 
-was honorably discharged as a Staff Sergeant and now pastors a church in Santa Fe. He feels 
-strongly called to help families thrive by promoting good laws in New Mexico. Chris and his wife 
-Kemle live in beautiful Santa Fe, where they enjoy the outdoors. <m class="more" id="Chris"></m>
+<bold>Chris Donnelly</bold> The Board and Executive Director would like to thank Chris Donnelly for his 
+dedication and service to the NM Center for Family Values. We wish him God's blessings as he moves on 
+to other areas of vocational pursuit. It has truly been a pleasure to work with him.
+<m class="more" id="Chris"></m>
 <!--[<a class="show_more" id="Chris">more</a>]--></td>
 </tr>
 </table>
