--- a/html/social.html
+++ b/html/social.html
@@ -86,7 +86,7 @@
 </style>
 
 <div class="social">
-<a href="https://twitter.com/NMCFP" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
-<a href="https://www.facebook.com/NMCFP" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
+<a href="https://twitter.com/NMCFV" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
+<a href="https://www.facebook.com/vffvnm" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
 <a href="./index.php?content=coming_soon" class="icon-button google-plus"><i class="icon-google-plus"></i><span></span></a>
 </div>
