Updated Board/Staff Page  - Added pictures  - Removed "Coming Soon"  - Updated Google+ link

--- a/html/people.html
+++ b/html/people.html
@@ -46,7 +46,7 @@ has been active in New Mexico politics for many years. <m class="more" id="Richa
 Legislature and for six years he was the Minority Floor Leader in the House of Representatives. 
 He also served for seven years as Chairman of the New Mexico Interstate Stream Commission. Richard is 
 presently Chairman of the Board of Citizens Bank in Farmington. He and his wife Janie reside in Farmington. 
-They have three children and five grandchildren. </m> 
+They have three children and five grandchildren. </m>
 [<a class="show_more" id="Richard">more</a>]</td>
 
 <td><img src="./images/people/Walter.jpg" />
@@ -73,7 +73,7 @@ beauty of nature, or a day at the lake fishing and boating with the family.</m>
 
 </tr><tr>
 
-<td><!--<img src="./images/people/Noel.jpg" />-->
+<td><img src="./images/people/Noel.jpg" />
 <bold>Noel Behne</bold> is a graduate of Jackson High School in Minnesota and Gustavus Adolphus 
 College in St. Peter, Minnesota. Noel and his wife, Fran, moved to New Mexico in 1965, where he worked 
 for First National Bank in Albuquerque and First Security Bank before retiring from full-time banking 
@@ -84,11 +84,6 @@ Club Board and the Santa Ana Hospitality Corporation. He and his wife worship at
 Rio Rancho.</m> 
 [<a class="show_more" id="Noel">more</a>]</td>
 
-<td><!--<img src="./images/people/Pat.jpg" />-->
-<bold>Pat Fort</bold> Coming Soon...<m class="more" id="Pat"></m>
-<!--[<a class="show_more" id="Pat">more</a>]--></td>
-
-</tr><tr>
 <td><img src="./images/people/Leonard.jpg" />
 <bold>Leonard Lee Rawson</bold> was appointed to the State Investment Council by the Legislative 
 Council in 2010. He is a native New Mexican and long-time Las Cruces resident who graduated from 
@@ -100,10 +95,12 @@ career began in 1987, when he was elected to the State House of Representatives.
 House until he was elected to the New Mexico Senate in 1993. He served four terms in the Senate, 
 became the Senate Minority Caucus Chair and later the Senate Minority Whip from 2001 to 2008. During 
 that time, Lee was also an active member of the Legislative Finance Committee and the Investments 
-and Pensions Oversight Committee.</m>
+and Pensions Oversight Committee. He and his wife Moira have been married for 34 years. They have 
+four sons and two daughters-in-law, with another one on the way this year, and eight grandchildren (so far).</m>
 [<a class="show_more" id="Leonard">more</a>]</td>
 
-<td><!--<img src="./images/people/William.jpg" />-->
+</tr><tr>
+<td><img src="./images/people/William.jpg" />
 <bold>William (“Bill”) Sharer</bold> is a graduate of Farmington High School, New Mexico Military 
 Institute Junior College and New Mexico State University. He served as an infantry officer in the 
 U.S. Army from 1978-1992. After leaving the Army, he opened a gourmet popcorn shop in Castle Rock, 
@@ -114,6 +111,11 @@ position today. He is the Ranking Member of the Senate Corporations and Transpor
 Bill is one of the founding members of what is now known as the NM Center for Family Policy. He and 
 his wife Beth reside in Farmington.</m>
 [<a class="show_more" id="William">more</a>]</td>
+
+<td></td>
+<!--<td><!--<img src="./images/people/Pat.jpg" />-->
+<!--<bold>Pat Fort</bold> Coming Soon...<m class="more" id="Pat"></m>
+<!--[<a class="show_more" id="Pat">more</a>]--><!--</td>-->
 </tr>
 </table>
 
@@ -150,7 +152,7 @@ Akita.</m>
 
 <td><img src="./images/people/Chris.jpg" />
 <bold>Chris Donnelly</bold> The Board and Executive Director would like to thank Chris Donnelly for his 
-dedication and service to the NM Center for Family Values. We wish him God's blessings as he moves on 
+dedication and service to the NM Center for Family Policy. We wish him God's blessings as he moves on 
 to other areas of vocational pursuit. It has truly been a pleasure to work with him.
 <m class="more" id="Chris"></m>
 <!--[<a class="show_more" id="Chris">more</a>]--></td>
