--- a/html/churches.html
+++ b/html/churches.html
@@ -1,12 +1,12 @@
-<div class="font" style="padding:10px">
-<p style="font-size:26px; font-weight:bold; text-align:center; margin-top: 0px;">Churches & Pastors</p>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><style type="text/css"></style></head><body><div class="font" style="padding:10px">
+<p style="font-size:26px; font-weight:bold; text-align:center; margin-top: 0px;">Churches &amp; Pastors</p>
 
 Our vision is to see the state of New Mexico transformed by the influence of churches and pastors as 
 they stand together for righteousness, preach the truth, and serve as the moral conscience of 
-society.<p />
+society.<p>
 
-<a href="http://www.speakupmovement.org/Church" class="link">Speak Up Movement - Alliance Defending Freedom</a><p />
-<a href="http://www.focusonthefamily.com/faith.aspx" class="link">Faith Page - Focus on the Family</a><p />
-<a href="http://www.thrivingpastor.org/" class="link">Site for Pastors - Thriving Pastor</a><p />
-<a href="http://www.fggam.org/" class="link">For God's Glory Alone Ministries</a><p />
-</div>
+<a href="http://www.speakupmovement.org/Church" class="link">Speak Up Movement - Alliance Defending Freedom</a></p><p>
+<a href="http://www.focusonthefamily.com/faith.aspx" class="link">Faith Page - Focus on the Family</a></p><p>
+<a href="http://www.thrivingpastor.org/" class="link">Site for Pastors - Thriving Pastor</a></p><p>
+<a href="http://www.fggam.org/" class="link">For God's Glory Alone Ministries</a></p><p>
+</p></div></body></html>
