--- a/html/nav.html
+++ b/html/nav.html
@@ -1,171 +1,24 @@
 <style>
-nav ul ul {
-	display: none;
-	background: #eee;
-	border-radius: 0px; 
-	padding: 0;
-	position: absolute;
-	top: 100%;
-	text-transform: none;
-	width: 170px;
-	font-weight: normal;
-}
-
-nav ul {
-	font-family: Arial, sans-serif;
-	font-size: 13px;
-	background: #eee;
-	text-transform: uppercase;
-	-webkit-border-top-right-radius: 10px;
-	-moz-border-radius-topright: 10px;
-	border-top-right-radius: 10px;
-	-webkit-border-top-left-radius: 10px;
-	-moz-border-radius-topleft: 10px;
-	border-top-left-radius: 10px;
-	-webkit-border-bottom-right-radius: 10px;
-	-moz-border-radius-bottomright: 10px;
-	border-bottom-right-radius: 10px;
-	-webkit-border-bottom-left-radius: 10px;
-	-moz-border-radius-bottomleft: 10px;
-	border-bottom-left-radius: 10px;
-	padding: 0 20px;
-	list-style: none;
-	position: relative;
-	display: inline-table;
-	display: block;
-	margin: 0 auto;
-	width: 742px;
-	font-weight:bold;
-}
-
-nav ul:after {
-	content: ""; clear: both; display: block;
-}
-
-nav ul li {
-	float: left;
-	border-bottom: 2px solid #eee;
-	border-top: 2px solid #eee;
-}
-
-nav ul li a {
-	display: block;
-	padding: 11px 20px;
-	color: #666;
-	text-decoration: none;
-}
-
-nav ul li:hover {
-	background: #f5f5f5;
-	border-bottom: 2px solid #DDD;
-}
-
-nav ul li:hover > ul {
-	display: block;
-	
-	-webkit-animation: fadein 350ms; /* Safari and Chrome */
-	-moz-animation: fadein 350ms; /* Firefox */
-	-ms-animation: fadein 350ms; /* Internet Explorer */
-	-o-animation: fadein 350ms; /* Opera */
-	animation: fadein 350ms;
-}
-
-nav ul ul li {
-	float: none;
-	border-bottom: 2px solid #eee;
-	border-top: 2px solid #eee;
-	position: relative;
-	text-align:center;
-}
-
-nav ul ul li a {
-	padding: 11px 25px;
-	color: #666;
-}
-
-nav ul ul li a:hover {
-	background: #f5f5f5;
-}
-
-.donate {
-	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
-	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5');
-	background-color:#79bbff;
-	-webkit-border-top-left-radius:21px;
-	-moz-border-radius-topleft:21px;
-	border-top-left-radius:21px;
-	-webkit-border-top-right-radius:21px;
-	-moz-border-radius-topright:21px;
-	border-top-right-radius:21px;
-	-webkit-border-bottom-right-radius:21px;
-	-moz-border-radius-bottomright:21px;
-	border-bottom-right-radius:21px;
-	-webkit-border-bottom-left-radius:21px;
-	-moz-border-radius-bottomleft:21px;
-	border-bottom-left-radius:21px;
-	text-indent:0;
-	border:1px solid #84bbf3;
-	display:inline-block;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	font-style:normal;
-	height:8px;
-	line-height:10px;
-	width:60px;
-	text-decoration:none;
-	text-align:center;
-	text-shadow:1px 1px 0px #528ecc;
-	text-transform: none;
-	margin: 3px 0px 0px 0px;
-	position: absolute;
-	right: 10px
-}
-
-.donate:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-	background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
-	background-color:#378de5;
-	color:#ffffff;
-}
-
-.donate:active {
-	position:absolute;
-	right:10px;
-	top:3px;
-	color:#ffffff;
-}
-
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
-/* Firefox */
 @-moz-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
-/* Safari and Chrome */
 @-webkit-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
-/* Internet Explorer */
 @-ms-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }​
 
-/* Opera */
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
@@ -175,12 +28,12 @@ nav ul ul li a:hover {
 <div class="nav">
 <nav>
 <ul>
-<li><a href="./index.php?content=home">Home</a></li>
-<li><a href="./index.php?content=churches">Churches/Pastors</a></li>
-<li><a href="./index.php?content=issues">Our Issues</a></li>
-<li><a href="./index.php?content=people">Board/Staff</a></li>
-<li><a href="./index.php?content=contact">Contact Us</a></li>
-<li><a class="donate" href="https://www.sagepayments.net/eftcart/forms/donate.asp?M_id=681553574625">Donate</a></li>
+<li><a id="home" href="#">Home</a></li>
+<li><a id="churches" href="#">Churches/Pastors</a></li>
+<li><a id="issues" href="#">Our Issues</a></li>
+<li><a id="people" href="#">Board/Staff</a></li>
+<li><a id="contact" href="#">Contact Us</a></li>
+<li><a class="blue_button" href="https://www.sagepayments.net/eftcart/forms/donate.asp?M_id=681553574625">Donate</a></li>
 </ul>
 </nav>
 </div>
