Misc Bug Fixes - Fixed broken link - Added coming soon page to PHP

--- a/html/vote/vote.html
+++ b/html/vote/vote.html
@@ -3,7 +3,7 @@
 
 <a class="link" id="call_to_vote">Register to vote</a><p />
 <p style="margin-left: 60px; margin-right: 60px; text-align: justify;">The Alliance Defending Freedom has reviewed the following Voter's Guides for compliance with 501(c)3 law. They may be distributed in unlimited quantities within churches, civic groups and other non-profit charitable organizations organized under 501(c)3 tax code.</p>
-<a class="link" id="coming_soon">Voter's Guide 1: Past Candidate Legislative votes... Coming Soon</a><br />
+<a class="link" href="./res/key-votes-candidates 2014.pdf" target="blank">Voter's Guide 1: Past Candidate Legislative votes</a><br />
 <font style="color: #E50000; font-size:12px">The Alliance Defending Freedom approves this guide for 501c3 distribution.</font><p />
 <a class="link" href="./res/survey-responses-candidates 2014.pdf" target="_blank">Voter's Guide 2: Candidate Survey Results</a><br />
 <font style="color: #E50000; font-size:12px">The Alliance Defending Freedom approves this guide for 501c3 distribution.</font><p />
